bug fix..